added findAllAriticle endpoint
